--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
             <div class="product-space">
                 <div class="product-card">
-                    <div class="product-img"><img src="Products/3x/m (1).jpg" alt=""></div>
+                    <div class="product-img"><img src="Products/w (1).jpg" alt=""></div>
                     <div class="product-details">
                         <p class="p-name">Dettol Intense Cool Bathing Soap </p>
                         <p class="p-cancel-price">MRP : <del>&#8377;500</del></p>
@@ -82,7 +82,7 @@
 
             <div class="product-space">
                 <div class="product-card">
-                    <div class="product-img"><img src="Products/3x/o (3).jpg" alt=""></div>
+                    <div class="product-img"><img src="Products/w (3).jpg" alt=""></div>
                     <div class="product-details">
                         <p class="p-name">Dettol Intense Cool Bathing Soap </p>
                         <p class="p-cancel-price">MRP : <del>&#8377;500</del></p>
@@ -93,7 +93,7 @@
 
             <div class="product-space">
                 <div class="product-card">
-                    <div class="product-img"><img src="Products/hair/h (2).jpg" alt=""></div>
+                    <div class="product-img"><img src="Products/body/b (2).jpg" alt=""></div>
                     <div class="product-details">
                         <p class="p-name">Dettol Intense Cool Bathing Soap </p>
                         <p class="p-cancel-price">MRP : <del>&#8377;500</del></p>
